--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo">pandas<b>.</b></div>
             <ul class="navItems">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="/jesus/home.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Blog</a></li>
@@ -26,7 +26,7 @@
         <div class="wrapper">
             <div class="check">
                 <div class="check2" style="font-size: 20px;">
-                  <a href="index2.html">Want to check today's weather</a>
+                  <a href="/weather/index2.html">Want to check today's weather</a>
                 </div>
               </div>
             
