--- a/jesus/home.html
+++ b/jesus/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jesus</title>
-    <link href="home.css" rel="stylesheet" />
+    <link href="/jesus/home.css" rel="stylesheet" />
   </head>
   <body>
     <header>
